<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rate_popup_ask_title">Like this App?</string>
    <string name="rate_popup_ask_message">Do you like using this application?</string>
    <string name="rate_popup_ask_ok">Yes I do</string>
    <string name="rate_popup_ask_no">Not really</string>

    <string name="rate_popup_title">Rate this app</string>
    <string name="rate_popup_message">Would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_popup_ok">Rate it now</string>
    <string name="rate_popup_later">Remind me later</string>
    <string name="rate_popup_no">No, thanks</string>
    <string name="rate_popup_close_description">Close</string>
    
    <string name="update_flexible_complete">An update has just been downloaded.</string>
    <string name="update_flexible_restart">Restart</string>
    <string name="update_flexible_progress_description">Update progress: %d%%</string>
    <string name="update_failed">There was an error while trying to update the app.</string>
</resources>