<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnRateBottomSheetCancel"
        android:layout_width="?attr/minTouchTargetSize"
        android:layout_height="?attr/minTouchTargetSize"
        android:layout_gravity="end"
        android:layout_margin="8dp"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        android:contentDescription="@string/rate_popup_close_description"
        app:srcCompat="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textRateBottomSheetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_popup_title"
            android:textAppearance="?attr/textAppearanceHeadlineSmall" />

        <TextView
            android:id="@+id/textRateBottomSheetMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/rate_popup_message"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRateBottomSheetNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_popup_no"
                style="?attr/borderlessButtonStyle"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnRateBottomSheetLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_popup_later"
                style="?attr/borderlessButtonStyle"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRateBottomSheetOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_popup_ok"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>